fix: quote update